<resources>
    <string name="app_name">myApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизация</string>
    <string name="login">Логин</string>
    <string name="name">ФИО</string>
    <string name="post">Должность</string>
    <string name="auth_btn">Далее</string>
    <string name="register">Регистрация</string>
    <string name="organization">Организация</string>
    <string name="status">Статус</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="participate">Участвовать</string>
    <string name="events">Мероприятия</string>
    <string name="repeat_title">Повторить</string>
    <string name="settings">Настройки</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="date">Дата проведения</string>
    <string name="add">Создать</string>
    <string name="create_event">Создать мероприятие</string>
    <string name="telegram">Telegram</string>
    <string name="create">Создать</string>
    <string name="url">URL</string>
    <string name="participateEvent">Участники</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="night_theme">Темная тема</string>
    <string name="signOut">Выйти с аккаунта</string>
    <string name="edit_event">Редактирование мероприятия</string>
    <string name="save">Сохранить</string>
    <string name="urls">Ссылки</string>
    <string name="hide">Свернуть</string>
    <string name="time">Время проведения</string>
    <string name="create_step">Создать этап</string>
    <string name="date_start">Дата начала</string>
    <string name="date_end">Дата окончания</string>
    <string name="edit_step">Редактировать этап</string>
    <string name="profile">Профиль</string>
    <string name="change_theme">Смена темы</string>
    <string name="notsubscribe">Отписаться</string>
    <string name="fio">ФИО</string>
</resources>