<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.turtleteam.myapp.ui.fragments.auth.registerfragment.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/authFragment"
        android:name="com.turtleteam.myapp.ui.fragments.auth.loginfragment.AuthFragment"
        android:label="@string/auth"
        tools:layout="@layout/fragment_auth" >
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_authFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.turtleteam.myapp.ui.fragments.home.HomeFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/participateFragment"
        android:name="com.turtleteam.myapp.ui.fragments.participate.ParticipateFragment"
        android:label="@string/participate"
        tools:layout="@layout/fragment_participate" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.turtleteam.myapp.ui.fragments.setting.SettingFragment"
        android:label="Настройки"
        tools:layout="@layout/fragment_setting" />
</navigation>