<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="10dp"
    android:id="@+id/itemCard"
    android:backgroundTint="@color/dark_purple"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/fio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/qanelas"
            android:text="@string/fio"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/postTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/qanelas"
            android:text="@string/post"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/qanelas"
            android:text="@string/status"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/organizationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/qanelas"
            android:text="@string/organization"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.cardview.widget.CardView>