<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.auth.registerfragment.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/registercardview"
        style="@style/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/qanelas"
                android:text="@string/register"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:id="@+id/fioEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/post"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:id="@+id/postEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/organization"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:id="@+id/organizationEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/statusPopupButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/qanelas"
                android:text="@string/status" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white">

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/editText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:fontFamily="@font/qanelas"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/qanelas"
                android:text="@string/auth_btn" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

</ScrollView>
